Fix scrolling issue on mobile due to sizing

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 
 body {
     overflow-x: hidden;    
-    height: 100dvh;           
+    height: 100vh;           
     margin: 0;
     padding: 0;
     text-align: center;
